--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,28 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- La siguiente linea hace el link a la hoja de estilos -->
-    <link rel="stylesheet" href="CSS/style.css">
-
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <!-- La siguiente linea coloca el logo que se ve en el navegador -->
+    <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon">
     <!-- La siguiente linea importa iconos desde fontawesome -->
     <script src="https://kit.fontawesome.com/37ef4fca07.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/09ab0314ed.js" crossorigin="anonymous"></script>
 
-    <script src="JS/funciones.js"></script>
-
-    <title>TRABAJO PRACTICO GRUPAL</title>
-</head>
-
-<body>
-
-    <header>
-
-        <script>
-            header();
-        </script>
-
-
-    </header>
+    <!--<link rel="preconnect" href="https://fonts.googleapis.com">-->
+    <!--<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>-->
+    <!--<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">-->
+    
+    <script src="../js/funciones.js"></script>
+    <script src="../js/encabezados.js"></script> 
+    <div id="header"></div>
 
     <main>
         <div class="container" id="galeria">
@@ -113,14 +109,5 @@
             </div>
 
         </div>
-    </main>
 
-    <footer>
-        <script>
-            footer();
-        </script>
-    </footer>
-
-</body>
-
-</html>
+        <div id="footer"></div>
