validacion del form y seccion destinos

--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -26,88 +26,69 @@
     <div id="header"></div>
 
     <main>
-        <div class="container" id="galeria">
+        <div class="container" id="destino">
             <div class="back_img">
                 <h2>
-                    Galeria
+                    Destinos
 
                 </h2>
             </div>
         </div>
         <div class="grid_container">
             <div class="grid_imagen">
-                <img class="grid_imagen_size" src=" imagenes/ada3.jpg ">
+                <img class="grid_imagen_size" src="../img/briloche.png">
                 <h3>Foto 2</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid, eum consequuntur saepe animi ullam quasi,
                 </p>
             </div>
             <div class="grid_imagen">
-                <img class="grid_imagen_size" src=" imagenes/ada3.jpg ">
+                <img class="grid_imagen_size" src="../img/caba.jpg">
                 <h3>Foto 3</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid, eum consequuntur saepe animi ullam quasi,
                 </p>
             </div>
             <div class="grid_imagen">
-                <img class="grid_imagen_size" src=" imagenes/ada3.jpg ">
+                <img class="grid_imagen_size" src="../img/cuyo.png ">
                 <h3>Foto 4</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid, eum consequuntur saepe animi ullam quasi,
                 </p>
             </div>
             <div class="grid_imagen">
-                <img class="grid_imagen_size" src=" imagenes/ada3.jpg ">
+                <img class="grid_imagen_size" src="../img/lA bocA.jpg ">
                 <h3>Foto 4</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid, eum consequuntur saepe animi ullam quasi,
                 </p>
             </div>
             <div class="grid_imagen">
-                <img class="grid_imagen_size" src=" imagenes/ada3.jpg ">
+                <img class="grid_imagen_size" src="../img/NEA.png ">
                 <h3>Foto 5</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid, eum consequuntur saepe animi ullam quasi,
                 </p>
             </div>
             <div class="grid_imagen">
-                <img class="grid_imagen_size" src=" imagenes/ada3.jpg ">
+                <img class="grid_imagen_size" src="../img/NOA.png ">
                 <h3>Foto 6</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid, eum consequuntur saepe animi ullam quasi,
                 </p>
             </div>
             <div class="grid_imagen">
-                <img class="grid_imagen_size" src=" imagenes/ada3.jpg ">
+                <img class="grid_imagen_size" src="../img/patagonia.png ">
                 <h3>Foto 7</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid, eum consequuntur saepe animi ullam quasi,
                 </p>
             </div>
             <div class="grid_imagen">
-                <img class="grid_imagen_size" src=" imagenes/ada3.jpg ">
+                <img class="grid_imagen_size" src="../img/sierras.jpg">
                 <h3>Foto 8</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid, eum consequuntur saepe animi ullam quasi,
                 </p>
             </div>
             <div class="grid_imagen">
-                <img class="grid_imagen_size" src=" imagenes/ada3.jpg ">
+                <img class="grid_imagen_size" src="../img/villa gral belgrano.jpeg ">
                 <h3>Foto 9</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid, eum consequuntur saepe animi ullam quasi,
                 </p>
             </div>
-            <div class="grid_imagen">
-                <img class="grid_imagen_size" src=" imagenes/ada3.jpg ">
-                <h3>Foto 10</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid, eum consequuntur saepe animi ullam quasi,
-                </p>
-            </div>
-            <div class="grid_imagen">
-                <img class="grid_imagen_size" src=" imagenes/ada3.jpg ">
-                <h3>Foto 11</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid, eum consequuntur saepe animi ullam quasi,
-                </p>
-            </div>
-            <div class="grid_imagen">
-                <img class="grid_imagen_size" src=" imagenes/ada3.jpg ">
-                <h3>Foto 12</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid, eum consequuntur saepe animi ullam quasi,
-                </p>
-            </div>
-
         </div>
 
         <div id="footer"></div>
