--- a/pages/header.html
+++ b/pages/header.html
@@ -19,8 +19,8 @@
             <ul id="menu">
                 <li><a href="../pages/nosotros.html" >Nosotros</a></li>
                 <li><a href="../pages/destinos.html">DESTINOS</a></li>
-                <li><a href="../pages/register.html">VIAJES COMPARTIDOS</a></li>
-                <li><a href="../pages/ofertar.html">OFRECÉ TU EMPRENDIMIENTO</a></li>
+                <!--<li><a href="../pages/register.html">VIAJES COMPARTIDOS</a></li>-->
+                <!--<li><a href="../pages/ofertar.html">OFRECÉ TU EMPRENDIMIENTO</a></li>-->
             </ul>
             <ul id="ingreso">
                     <li><a href="../pages/login.html">INGRESAR</a></li>
