--- a/pages/register.html
+++ b/pages/register.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -25,9 +24,9 @@
     <script src="../js/encabezados.js"></script> 
     <div id="header"></div>
     
-      <section class="form">
+      <section class="form" id="formulario">
         <h1>REGISTRARSE</h1>
-        <form action="">
+        <form name="fvalida" action="" onsubmit="return validarEnviar();">
           <div class="group-form">
             <label for="nombre">Nombre</label>
             <input
@@ -65,43 +64,43 @@
           </div>
 
           <div class="group2-form">
-            <h3>Lenguajes</h3>
-            <select name="" id="">
-              <option value="">Javascript</option>
-              <option value="">Java</option>
-              <option value="">Python</option>
+            <h3>Interes</h3>
+            <select name="intereses" id="intereses">
+              <option value="">Viajes</option>
+              <option value="">Hoteles</option>
+              <option value="">Paquetes</option>
             </select>
           </div>
           <div class="group2-form">
-            <h3>Turnos</h3>
-            <input type="radio" name="" id="" />
-            <label for="">Turno Mañana</label>
-            <input type="radio" name="" id="" />
-            <label for="">Turno Tarde</label>
-            <input type="radio" name="" id="" />
-            <label for="">Turno Noche</label>
+            <h3>Sexo</h3>
+            <input type="radio" name="sexo" id="Hombre" />
+            <label for="Hombre">Hombre</label>
+            <input type="radio" name="sexo" id="Mujer" />
+            <label for="Mujer">Mujer</label>
+            <input type="radio" name="sexo" id="X" />
+            <label for="X">X</label>
           </div>
 
           <div class="group2-form">
             <h3>Hobbies</h3>
-            <input type="checkbox" name="" id="" />
-            <label for="hobbie">Guitarra</label>
-            <input type="checkbox" name="" id="" />
-            <label for="hobbie">Futbol</label>
-            <input type="checkbox" name="" id="" />
-            <label for="hobbie">Tenis</label>
-            <input type="checkbox" name="" id="" />
-            <label for="hobbie">Programación</label>
+            <input type="checkbox" name="hobbies" id="hobbieGuitarra" />
+            <label for="hobbieGuitarra">Guitarra</label>
+            <input type="checkbox" name="hobbies" id="hobbieFutbol" />
+            <label for="hobbieFutbol">Futbol</label>
+            <input type="checkbox" name="hobbies" id="hobbieTenis" />
+            <label for="hobbieTenis">Tenis</label>
+            <input type="checkbox" name="hobbies" id="hobbieProgramacion" />
+            <label for="hobbieProgramacion">Programación</label>
           </div>
 
           <div class="group2-form">
             <h3>Dejanos tu comentario</h3>
-            <textarea name="" id="" cols="30" rows="8"></textarea>
+            <textarea name="comentario" id="comentario" cols="30" rows="8"></textarea>
           </div>
 
           <div class="group2-form">
-            <input type="checkbox" name="" id="" />
-            <label for="">Acepto Terminos y condiciones</label>
+            <input type="checkbox" name="terminos" id="terminos" />
+            <label for="terminos">Acepto Terminos y condiciones</label>
           </div>
           <div class="group2-form">
             <button type="submit">Registrarme</button>
@@ -112,3 +111,60 @@
         </form>
       </section>
       <div id="footer"></div>
+</head>
+
+<body>
+
+<script>
+// Funciones para validar formularios
+/*
+function validarEnviar() {
+
+  var formulario = document.forms["fvalida"];
+
+  // Valida el nombre
+  if (formulario.nombre.value.length < 5) { // Cambiado de <= a <
+      alert("El nombre debe tener al menos 5 caracteres");
+      formulario.nombre.focus();
+      return false;
+  }
+
+  // Valida email
+  var testear = /^\w+([\.-]?\w+)*@(?:|hotmail|outlook|yahoo|live|gmail)\.(?:|com|es)+$/;
+  if (!testear.test(formulario.email.value)) {
+      alert("La dirección de email no es válida");
+      formulario.email.focus();
+      return false;
+  }
+
+  // Valida el interés -> no tiene sentido porque ya aparece una opcion por defecto
+  /*if (formulario.intereses.selectedIndex ==='') {
+      alert("Debe seleccionar un interes");
+      formulario.intereses.focus();
+      return false;
+  }*/
+
+  // Valida el mensaje
+  /*if (formulario.comentario.value.length === 0) {
+      alert("Debe dejar un comentario");
+      formulario.comentario.focus();
+      return false;
+  }
+
+  // Valida si acepta los términos y condiciones
+  if (!formulario.terminos.checked) {
+      alert("Debe aceptar los términos y condiciones");
+      formulario.terminos.focus();
+      return false;
+  }
+
+  // Si llegó hasta aquí, el formulario es válido
+  alert("Muchas gracias por enviar el formulario");
+  return true;
+}*/
+
+</script>
+
+</body>
+
+</html>
