--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -34,25 +34,11 @@
                 </h2>
             </div>
             <div class="bloque-inicio">
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora porro similique, blanditiis nostrum placeat accusamus! Cupiditate officiis odio amet repellat facere provident nisi ipsum sint facilis magni consectetur adipisci, at accusamus ipsam obcaecati
-                    mollitia numquam non nihil nemo fuga? Exercitationem autem non corporis nulla quam pariatur aliquid accusamus blanditiis amet unde sint reprehenderit corrupti delectus consequuntur magni harum placeat a, recusandae asperiores, accusantium
-                    aut. In exercitationem saepe, et culpa aut quam eius asperiores optio, atque ad itaque recusandae ipsum. Assumenda est dolorem molestias eligendi? Voluptatibus saepe sunt vero expedita impedit, necessitatibus itaque eum minima explicabo
-                    suscipit porro? Illo illum odio necessitatibus est quaerat voluptate modi quis libero alias aspernatur? Odio id magnam repellendus? Dignissimos vel consequuntur mollitia distinctio, deleniti sit minus repudiandae debitis vero cumque!
-                    Ab modi perspiciatis, voluptates hic impedit provident obcaecati quisquam doloribus ea exercitationem quaerat tenetur maxime veniam atque aliquid. Eum reiciendis dolor accusamus unde, rem expedita quo beatae eius exercitationem at
-                    deserunt, ipsam, tenetur aliquid. Praesentium quo tempora harum, ducimus minus doloremque mollitia, laborum rem, laboriosam quisquam iure at ipsum placeat molestiae similique quas numquam inventore voluptates natus iste. Dolore facilis
-                    labore ex molestias beatae enim, delectus commodi alias voluptas asperiores illo amet? Quas fugit mollitia in eveniet vero nesciunt deserunt iure quo quis, labore earum, aut laborum repellendus, velit quasi quisquam debitis quam vel?
-                    Rerum ex perspiciatis fuga nihil ipsam reprehenderit, officiis ratione earum dolore hic quae quod consectetur repellendus. Animi voluptate quo, qui corrupti non sapiente neque adipisci ipsam, quia dolore ea ab velit facilis, aliquid
-                    ut eligendi laboriosam reiciendis tenetur omnis. Debitis unde voluptatum neque esse corrupti nam. Voluptatum unde dolorum deserunt sint voluptates, reprehenderit laudantium culpa mollitia assumenda ab nostrum animi quisquam esse eligendi
-                    expedita quo exercitationem repudiandae aliquid voluptas cum nihil! Impedit illo minus itaque possimus nesciunt suscipit obcaecati sunt voluptatem, hic sed ad in est? Pariatur natus voluptatibus aspernatur corrupti harum vel aut tenetur
-                    ducimus ad libero exercitationem nulla minima dolores eligendi, deleniti, ab blanditiis sapiente iusto nihil alias debitis facere repellat similique? Fugit mollitia, ducimus laboriosam tempore accusantium, quas tempora perspiciatis
-                    hic praesentium quaerat iure sapiente unde magnam voluptatem odio odit omnis quasi nam laudantium. Inventore dolor fugiat quasi tempora pariatur sint aspernatur vitae ea labore animi quaerat recusandae possimus, sapiente aliquid et
-                    aut velit repellat illum assumenda distinctio dolores. Nihil ad distinctio nisi recusandae, incidunt ducimus ut soluta nobis atque excepturi. Laborum in dolores alias voluptatibus illum asperiores dolorum necessitatibus saepe harum,
-                    porro perferendis sit officiis possimus eligendi earum pariatur explicabo velit, unde amet, ipsum beatae! Quibusdam adipisci non ab dolores doloremque laboriosam unde ipsa facilis rerum voluptatibus, ipsum dolorum accusamus ea. Fugit,
-                    amet, perspiciatis illum quidem quasi corporis voluptatem veniam vitae architecto mollitia iure enim eligendi aliquam dicta. Culpa facilis dolore, perspiciatis facere id iste! Reprehenderit asperiores, odio sunt animi veniam aperiam
-                    adipisci mollitia distinctio velit consequatur, eius, fugit deserunt. Necessitatibus delectus architecto natus quasi repellendus. Consequatur maxime saepe ipsam explicabo quod quis doloribus necessitatibus eveniet pariatur sunt, veniam
-                    cumque, nulla culpa quaerat natus ea non aut.
-                </p>
+                <p>Somos Turismo Colectivo Argentino, una empresa dedicada a ofrecer la mejor experiencia de viaje a lo largo y ancho de Argentina. Con más de una década de experiencia en la industria del turismo, nos enorgullecemos de brindar una amplia variedad de paquetes y servicios diseñados para satisfacer todas las necesidades y gustos de nuestros clientes.</p>
+        <p>Nuestro equipo está compuesto por apasionados del turismo que conocen cada rincón del país. Desde las majestuosas montañas de la Patagonia hasta las vibrantes calles de Buenos Aires, estamos aquí para hacer que tu viaje sea inolvidable.</p>
+        <p>En Turismo Colectivo Argentino, creemos en la importancia de ofrecer experiencias auténticas y significativas. Por eso, trabajamos en estrecha colaboración con proveedores locales para ofrecer actividades únicas y auténticas en cada destino que visitamos.</p>
+        <p>Ya sea que estés buscando aventuras al aire libre, degustaciones de vinos, experiencias culturales o simplemente relajarte en la playa, tenemos el paquete perfecto para ti. Nuestro objetivo es superar tus expectativas y convertir tus sueños de viaje en realidad.</p>
+        <p>Descubre Argentina con Turismo Colectivo Argentino y vive una experiencia que recordarás para siempre. ¡Te esperamos en tu próximo viaje!</p>
             </div>
         </div>
     
